# libUvula

./: CMakeLists.txt  README.md  conanfile.py  conanfile_pip.py  pyproject.toml
.github/workflows/: package.yml
UvulaJS/: CMakeLists.txt  UvulaJS.cpp
include/: project.h
pyUvula/: CMakeLists.txt  pyUvula.cpp
src/: project.cpp  unwrap.cpp  xatlas.cpp
